--- a/MyOwnLanguageNEW.csproj
+++ b/MyOwnLanguageNEW.csproj
@@ -53,6 +53,7 @@
     <Compile Include="Libraries\Library.cs" />
     <Compile Include="Libraries\Console.cs" />
     <Compile Include="Libraries\Math.cs" />
+    <Compile Include="Libraries\Window.cs" />
     <Compile Include="MainLibrary.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utilities.cs" />
